# Pet_project_back

./: .gitignore  README.md  common_defs.h  installer_routines.py  pet_installer.py
DBs_scripts/: READ_ME.txt  create_db_POSTGRE.sh  postgre.sql  postgre_db.sql  sqlite.sql
Service_files/: http_daemon.service  ini_example.ini.pg  ini_example.ini.pg_sl  ini_example.ini.sl  ini_example.ini.sl_pg  watch_daemon.service
TDB_workers/: .gitignore  CMakeLists.txt
TDB_workers/include/: TDB_SQLite_worker.h  TDB_iworkers.h  TDB_postgre_worker.h  TDB_workers_fabrique.h
TDB_workers/src/: TDB_SQLite_worker.cpp  TDB_postgre_worker.cpp  TDB_workers_fabrique.cpp
base_daemon/: .gitignore  CMakeLists.txt
base_daemon/include/: base_daemon.h
base_daemon/src/: base_daemon.cpp
file_watcher/: .gitignore  CMakeLists.txt
file_watcher/include/: inoty_wrapper.h
file_watcher/src/: inoty_wrapper.cpp
file_watcher/test_dir/: .gitignore  CMakeLists.txt  README.txt  test_lib.cpp
filewatch_daemon/: .gitignore  CMakeLists.txt
filewatch_daemon/complete_daemon/: CMakeLists.txt  README.txt  ini_example.ini  ini_example.ini.PG  watch_daemon.cpp
filewatch_daemon/include/: filewatch_daemon.h
filewatch_daemon/src/: filewatch_daemon.cpp
http_daemon/: .gitignore  CMakeLists.txt
http_daemon/complete_daemon/: CMakeLists.txt  README.txt  http_daemon.cpp  ini_example.ini.pg  ini_example.ini.sl  ini_example.ini.sl_pg
http_daemon/include/: http_server.h
http_daemon/src/: http_server.cpp
ini_file_parser/: .gitignore  CMakeLists.txt
ini_file_parser/include/: ini_file_parser.h
ini_file_parser/src/: ini_file_parser.cpp
ini_file_parser/test_dir/: CMakeLists.txt  ini_example.ini  run_all_tests.sh  test_lib.cpp
pet_logger/: .gitignore  CMakeLists.txt
pet_logger/include/: pet_logger.h
pet_logger/src/: pet_logger.cpp
